updating auth
